# doom-checkboxes

./: .gitignore  .railwayignore  Dockerfile  README.md  index.html  main.ts  netlify.toml  node_modules  package.json  playwright.config.js  playwright.config.ts  playwright.local.config.ts  playwright.prod.config.ts  railway.json  smoke-test.spec.js  test-fixed.spec.js  test-mouse.spec.js  test-panning.spec.js  test-setup.js  test-teardown.js  test.spec.js
.github/workflows/: test-and-deploy.yml
backend/: spacetime.ci.json  spacetime.json  spacetime.production.json  spacetime.staging.json
backend/src/: lib.rs
docs/: performance-results.md  worker-architecture.md
docs/superpowers/plans/: 2026-03-18-billion-checkboxes.md  2026-03-18-leptos-frontend-rewrite.md  2026-03-20-web-worker-networking.md
docs/superpowers/specs/: 2026-03-17-minimal-collaboration-test-design.md  2026-03-17-playwright-e2e-testing-design.md  2026-03-17-playwright-e2e-testing-revised-design.md  2026-03-17-test-database-infrastructure-design.md  2026-03-18-billion-checkboxes-design.md  2026-03-18-leptos-frontend-rewrite-design.md  2026-03-20-web-worker-networking-design.md
frontend-rust/: Cargo.toml  Trunk.toml  build-worker.sh  doom-jacobenget.js  doom-mode.js  index.html  worker-loader.js
frontend-rust/pkg/worker/: worker.js  worker_bg.wasm
frontend-rust/pkg/worker/snippets/checkbox-frontend-239215624fedded8/: inline0.js
frontend-rust/src/: app.rs  bookmark.rs  compression.rs  constants.rs  db.rs  doom.rs  lib.rs  main.rs  state.rs  styles.css  utils.rs  webgl.rs  worker_bridge.rs  ws_client.rs
frontend-rust/src/components/: canvas.rs  header.rs
frontend-rust/src/worker/: client.rs  mod.rs  protocol.rs
scripts/: deploy-production.sh  deploy-staging.sh  package.json  reset-test-state.js  start-test-env.sh  test-db-manager.js
tests/: doom-performance.spec.ts  doom-spectator.spec.ts  drag-to-fill.spec.ts  navigation.spec.ts  perf-profile.spec.ts  screenshot.spec.ts  stress.spec.ts  worker-performance.spec.ts
typescript-frontend/: debug_test.cjs  debug_test_8080.cjs  debug_test_fixed.cjs  debug_test_simple.cjs  demo.html  index.html  netlify.toml  package.json  playwright.config.js  playwright.config.ts  test-collaboration.js  test-config.js  test-persistence.js  test-production.js  test-setup.js  test-teardown.js  vitest.config.ts
typescript-frontend/.netlify/: netlify.toml  state.json
typescript-frontend/playwright-report/: index.html
typescript-frontend/src/: SpacetimeDBCheckboxApp.ts
typescript-frontend/test/: checkbox-auto-connection.test.ts  checkbox-persistence.test.ts  checkbox-websocket.test.ts
typescript-frontend/test-results/: .last-run.json
typescript-frontend/test-results/spacetimedb-connection-Spa-25847-play-database-configuration-Mobile-Chrome/: video.webm
typescript-frontend/test-results/spacetimedb-connection-Spa-25847-play-database-configuration-Mobile-Safari/: error-context.md
typescript-frontend/test-results/spacetimedb-connection-Spa-25847-play-database-configuration-chromium/: error-context.md
typescript-frontend/test-results/spacetimedb-connection-Spa-25847-play-database-configuration-firefox/: error-context.md
typescript-frontend/test-results/spacetimedb-connection-Spa-25847-play-database-configuration-webkit/: video.webm
typescript-frontend/test-results/spacetimedb-connection-Spa-674da-onnection-errors-gracefully-Mobile-Chrome/: error-context.md
typescript-frontend/test-results/spacetimedb-connection-Spa-674da-onnection-errors-gracefully-Mobile-Safari/: video.webm
typescript-frontend/tests/: basic-functionality.spec.ts  configuration-fix.spec.ts  csp-fix.spec.ts  navigation-interaction.spec.ts  page-refresh-persistence.spec.ts  performance.spec.ts  spacetimedb-connection.spec.ts
(+4 files in other folders)
