[package]
name = "checkbox-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }

# SpacetimeDB SDK: currently disabled for WASM due to openssl-sys dependency issue
# Will be re-enabled in Chunk 3/4 when SpacetimeDB integration is implemented
# spacetimedb-sdk = "2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "WheelEvent",
    "Element",
    "DomRect",
    "Location",
    "console",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
log = "0.4"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
