[package]
name = "checkbox-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }

# SpacetimeDB protocol types (WASM-compatible, no native dependencies)
spacetimedb-sats = "2.0"
spacetimedb-lib = "2.0"
spacetimedb-client-api-messages = "2.0"

# WASM/web dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "WheelEvent",
    "Element",
    "DomRect",
    "Location",
    "console",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "CloseEvent",
    "ErrorEvent",
    "Blob",
    # WebGL
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlTexture",
    "WebGlUniformLocation",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
log = "0.4"

# For decompression of server messages (brotli)
brotli = { version = "3.5", default-features = false, features = ["std"] }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
bytes = "1.10"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
